# sapphire

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  test_begin.spr  test_else.spr  test_else2.spr  test_rescue.spr
.github/workflows/: ci.yml  release.yml
benches/: return_type.rs
docs/: adding-stdlib-class.md  architecture.md  gc.md  opcodes.md  tutorial.md
examples/: blocks.spr  classes.spr  collections.spr  control_flow.spr  error_handling.spr  functions.spr  generics.spr  geometry.spr  hello.spr  interfaces.spr  nested_classes.spr  run_all.sh
examples/geometry/: point.spr  shapes.spr
scripts/: ci  release.sh
src/: ast.rs  chunk.rs  compiler.rs  datetime.rs  environment.rs  error.rs  gc.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  native.rs  native_bool.rs  native_dispatch.rs  native_env.rs  native_file.rs  native_float.rs  native_int.rs  native_list.rs  native_map.rs  native_math.rs  native_nil.rs  native_process.rs  native_range.rs  native_regex.rs  native_set.rs  native_socket.rs  native_string.rs  parser.rs  token.rs  typechecker.rs  value.rs  vm.rs  wasm.rs
stdlib/: bool.spr  float.spr  int.spr  list.spr  map.spr  math.spr  nil.spr  num.spr  object.spr  string.spr
stdlib/src/: Test.spr  bool.spr  date.spr  datetime.spr  duration.spr  env.spr  file.spr  float.spr  instant.spr  int.spr  list.spr  map.spr  math.spr  nil.spr  num.spr  object.spr  process.spr  regex.spr  set.spr  socket.spr  string.spr  (+2 more)
tests/: abstract.rs  cli_typecheck_gate.rs  gc_cycles.spr  import.rs  interface.rs  interpreter.rs  lexer.rs  module.spr  modules_test.spr  stdlib.rs  typechecker.rs  vm.rs  vm_bytecode.rs
(+30 files in other folders)
