[package]
name = "sapphire"
version = "0.4.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["rustyline"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustyline = { version = "14", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "return_type"
harness = false
