[package]
name = "sapphire-lang"
version = "0.7.0"
edition = "2024"
description = "Gradually typed scripting language where every value is an object and types are optional, checked at runtime"
license = "MIT"
repository = "https://github.com/sapphire-project/sapphire"
homepage = "https://sapphire-lang.dev"
keywords = ["scripting", "language", "interpreter", "bytecode", "vm"]
categories = ["command-line-utilities", "compilers"]
readme = "README.md"

[features]
default = ["cli"]
cli = ["rustyline"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[lib]
name = "sapphire"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustyline = { version = "14", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
jiff = { version = "0.2", features = ["tzdb-bundle-always", "std", "tz-system"], default-features = false }
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "return_type"
harness = false
